gunbroker.com (archived on 2002-06-04)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping;weapons",
  "char_count": 7146,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.88,
  "homepage_snapshot_redirected_domain": "gunbroker.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020328054830id_/http://www.gunbroker.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328054830id_/http%3A//gunbroker.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "gunbroker.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020604184609id_/http%3A//www.gunbroker.com/user/PrivacyPolicy.asp",
  "policy_title": "GunBroker.com Privacy Policy",
  "policy_url": "gunbroker.com/user/PrivacyPolicy.asp",
  "sha1": "43b8a936d381a537becedc565c20ef693b3d38c0",
  "simhash": 17097419360721838082,
  "simhash_updated": true,
  "site_hostname": "gunbroker.com",
  "site_url": "http://gunbroker.com",
  "smog": 14.41,
  "strict_updated": true,
  "timestamp": "20020604184609",
  "word_count": 1140,
  "year": 2002
}

--- a/g/gu/gun/gunbroker.com.html
+++ b/g/gu/gun/gunbroker.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gunbroker.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205072140id_/http%3A//gunbroker.com/user/PrivacyPolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gunbroker.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604184609id_/http%3A//www.gunbroker.com/user/PrivacyPolicy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>GunBroker.com Privacy Policy</title>
@@ -7,22 +7,11 @@
 <meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.rsac.org/ratingsv01.html&quot; l gen true comment &quot;RSACi North America Server&quot; for &quot;http://www.gunbroker.com&quot; on &quot;1999.06.18T04:53-0800&quot; r (n 0 s 0 v 0 l 0))">
 </head>
 
-
 <body bgcolor="FFFFFF" topmargin="4">
 
-<table border="0" width="100%" bgcolor="#B3FFB3" cellspacing="0" cellpadding="0">
+<table border="0" width="100%" bgcolor="#B3FFB3" cellspacing="0" cellpadding="2">
   <tbody><tr>
-    <td align="left" bgcolor="white">
-    <map name="PartnerTabs">
-    <area shape="RECT" coords="451, 3, 672, 43" href="http://www.gunbroker.com/hd/">
-    <area shape="RECT" coords="227, 3, 448, 43" href="http://www.gunbroker.com/ctd/">
-    <area shape="RECT" coords="4, 3, 220, 43" href="http://www.gunbroker.com/">
-    </map>
-    <img src="/images/TopOfPageTabs.gif" width="677" height="42" alt="GunBroker.com Online Gun Auction" border="0" usemap="#PartnerTabs">
-    </td>
-  </tr>
-  <tr>
-    <td align="center">
+    <td align="center" colspan="2">
 
 <table border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
@@ -38,20 +27,6 @@
       <table cellspacing="0" cellpadding="0" border="0">
         <tbody><tr>
           <td width="468" height="60">
-
-   <script language="JavaScript" src="http://a1028.g.akamai.net/6/1028/968/444516c765e1c0/sprfetch.about.com/cgi/sprinks/sprinksA.js?con=gunbroker&amp;id=0&amp;type=1"></script> 
-   <noscript>
-   <TABLE BORDER=0 WIDTH=468 HEIGHT=60 CELLPADDING=1 CELLSPACING=0 BGCOLOR="#000000">
-   <TR><TD>
-   <TABLE BORDER=0 WIDTH=100% HEIGHT=60 CELLPADDING=2 CELLSPACING=0 BGCOLOR="#FFFFFF">
-   <TR><TD ALIGN="center">
-   <FONT FACE="Verdana, Helvetica, sans-serif" SIZE=2>
-   <A HREF="http://sprinks.about.com/" TITLE="Buy a sponsored link on this site now."><B><FONT COLOR="#CC0000">Buy a sponsored link on this site now!</FONT></B></A><P>
-   </FONT>
-   </TD></TR></TABLE>
-   </TD></TR></TABLE>
-   </noscript> 
-   <script>sprinks468();</script>
 
           </td>
         </tr>
@@ -88,6 +63,24 @@
 
     </td>
   </tr>
+<!--
+  <tr bgcolor="#79FF79">
+    <td align="left">&nbsp;</td>
+
+    <form method="POST" action="http://mail.gunbroker.com/members.asp?Task=Join" name="ENewsletterPro_JoinForm">
+      <input type="hidden" name="NewsletterListID_2" value="ON">
+      <input type="hidden" name="JoinType" value="Check">
+      <input type="hidden" name="IDList" value="2">
+      <input type="hidden" name="DeliveryFormat" value="TEXT">
+
+      <td align="right"><span style="font-family: Arial; font-size: 8pt">Join our Email List: 
+      <input type="text" name="Email" size="20" maxlength="255"
+      style="font-size: 8pt; font-family: Arial"> <input type="submit" value="Join" name="B1"
+      style="font-size: 8pt; font-family: Arial"> </span></td>
+    </form>
+
+  </tr>
+-->
 </tbody></table>
 
 
@@ -244,16 +237,18 @@
 <p>&nbsp;</p>
 <table width="100%">
   <tbody><tr>
-    <td><hr></td>
+    <td colspan="3"><hr></td>
   </tr>
   <tr>
+    <td width="100" valign="top"><a href="http://www.hsshf.org/"><img src="/images/NSSF/HeritageFund100x68.gif" border="0" width="100" height="68"></a></td>
     <td align="center" width="100%"><font size="2"><b>GunBroker.com - 
     The Web's Largest Hunting and Sport Shooting Auction™</b><br>
-    Copyright © 1999, 2000, 2001 GB Holdings, Inc. All Rights Reserved Worldwide<br>
+    Copyright © 1999 - 2002 GB Holdings, Inc. All Rights Reserved Worldwide<br>
     <a href="/user/Contact.asp">Contact Us</a> &nbsp;|&nbsp; <a href="/user/PrivacyPolicy.asp">Privacy Policy</a>
     &nbsp;|&nbsp; <a href="/user/UserAgreement.asp">Terms of Service</a><br>
     <a href="/user/Affiliate.asp">Make Money with your web site - Join our Affiliate Program</a></font>
     </td>
+    <td width="100" valign="top"><a href="http://membership.nrahq.org/default.asp?comapignid=XR014432"><img src="/images/NRA/JoinHere.gif" border="0" width="100" height="100"></a></td>
   </tr>
 </tbody></table>
 
