--- a/a/ac/acc/accessmedicine.com.html
+++ b/a/ac/acc/accessmedicine.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the accessmedicine.com privacy policy that was archived on 2001-09-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010904072114id_/http%3A//accessmedicine.com/amed/public/amed_terms/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the accessmedicine.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604190113id_/http%3A//www.accessmedicine.com/amed/public/amed_terms/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -22,7 +22,12 @@
 <!-- floater_menus.js -- Variables and functions for floating icon and TOC popup menus. NO Lister -->
 <script src="/amed/public/all_scripts/floater_menus.js" language="javascript" type="text/javascript"></script>
 
+
+
 </noindex>
+
+
+
 
 
 
@@ -40,7 +45,7 @@
 </tr>
 <tr>
 
-	<td height="16"><img src="/amed/public/all_images/dot_009007041.gif" width="112" height="16" border="0" alt=""><a href="/amed/public/index.html" onmouseover="image_over('gmenu_am_home')" onmouseout="image_out('gmenu_am_home')"><img src="/amed/public/all_images/gmenu_am_home_out.gif" width="144" height="16" border="0" name="gmenu_am_home" alt="AccessMedicine Home"></a><a href="javascript:obj_show('pubsmenu');" onmouseover="image_over('gmenu_am_pub')" onmouseout="image_out('gmenu_am_pub')"><img src="/amed/public/all_images/gmenu_am_pub_out.gif" width="106" height="16" border="0" name="gmenu_am_pub" alt="Publications"></a><a href="/amed/public/amed_about/about.html" onmouseover="image_over('gmenu_am_about')" onmouseout="image_out('gmenu_am_about')"><img src="/amed/public/all_images/gmenu_am_about_out.gif" width="61" height="16" border="0" name="gmenu_am_about" alt="About"></a><a href="/amed/public/amed_demo/demo.html" onmouseover="image_over('gmenu_am_demos')" onmouseout="image_out('gmenu_am_demos')"><img src="/amed/public/all_images/gmenu_am_demos_out.gif" width="65" height="16" border="0" name="gmenu_am_demos" alt="Demos"></a><a href="/amed/public/amed_order/free_trial.html" onmouseover="image_over('gmenu_am_free')" onmouseout="image_out('gmenu_am_free')"><img src="/amed/public/all_images/gmenu_am_free_out.gif" width="78" height="16" border="0" name="gmenu_am_free" alt="Free Trial"></a><a href="/harrisons/public/su_search/advanced_search.html" onmouseover="image_over('gmenu_am_search')" onmouseout="image_out('gmenu_am_search')"><img src="/amed/public/all_images/gmenu_am_search_out.gif" width="65" height="16" border="0" name="gmenu_am_search" alt="Search"></a><a href="/amed/public/amed_order/order.html" onmouseover="image_over('gmenu_am_order')" onmouseout="image_out('gmenu_am_order')"><img src="/amed/public/all_images/gmenu_am_order_out.gif" width="63" height="16" border="0" name="gmenu_am_order" alt="Order"></a></td>
+	<td height="16"><img src="/amed/public/all_images/dot_009007041.gif" width="112" height="16" border="0" alt=""><a href="http://www.accessmedicine.com/" onmouseover="image_over('gmenu_am_home')" onmouseout="image_out('gmenu_am_home')"><img src="/amed/public/all_images/gmenu_am_home_out.gif" width="144" height="16" border="0" name="gmenu_am_home" alt="AccessMedicine Home"></a><a href="javascript:obj_show('pubsmenu');" onmouseover="image_over('gmenu_am_pub')" onmouseout="image_out('gmenu_am_pub')"><img src="/amed/public/all_images/gmenu_am_pub_out.gif" width="106" height="16" border="0" name="gmenu_am_pub" alt="Publications"></a><a href="/amed/public/amed_about/about.html" onmouseover="image_over('gmenu_am_about')" onmouseout="image_out('gmenu_am_about')"><img src="/amed/public/all_images/gmenu_am_about_out.gif" width="61" height="16" border="0" name="gmenu_am_about" alt="About"></a><a href="/amed/public/amed_demo/demo.html" onmouseover="image_over('gmenu_am_demos')" onmouseout="image_out('gmenu_am_demos')"><img src="/amed/public/all_images/gmenu_am_demos_out.gif" width="65" height="16" border="0" name="gmenu_am_demos" alt="Demos"></a><a href="/amed/public/amed_order/free_trial.html" onmouseover="image_over('gmenu_am_free')" onmouseout="image_out('gmenu_am_free')"><img src="/amed/public/all_images/gmenu_am_free_out.gif" width="78" height="16" border="0" name="gmenu_am_free" alt="Free Trial"></a><a href="/amed/public/amed_search/search.html" onmouseover="image_over('gmenu_am_search')" onmouseout="image_out('gmenu_am_search')"><img src="/amed/public/all_images/gmenu_am_search_out.gif" width="65" height="16" border="0" name="gmenu_am_search" alt="Search"></a><a href="/amed/public/amed_order/order.html" onmouseover="image_over('gmenu_am_order')" onmouseout="image_out('gmenu_am_order')"><img src="/amed/public/all_images/gmenu_am_order_out.gif" width="63" height="16" border="0" name="gmenu_am_order" alt="Order"></a></td>
 
 </tr>
 </tbody></table>
@@ -106,15 +111,15 @@
 
 <font class="headtitle">Privacy Notice<br></font>
 
-<p>When you subscribe to <font class="textemphasis">Harrison's Online</font> or register for a trial subscription, we collect certain personal information, such as your name, address, and e-mail address. We use this information to process your order and for administration of your subscription. Your e-mail address is added to our electronic mailing list so that, from time to time, we can send you information about new features, additions, and changes to our Web site. If you do not want to receive e-mail alerts, you may indicate this on your registration form, and you can change this at any time by going to the Subscriber Services section and selecting "Edit your registration information." Also, <font class="textemphasis">Harrison's Online</font> may occasionally make subscriber information available to other units within The McGraw-Hill Companies as well as to selected outside companies whose products or services we feel may be of interest to you.
+<p>When you subscribe to <font class="textemphasis">Access</font>Medicine services (including <font class="textcitation">Harrison's Online</font> and <font class="textcitation">Hurst's the Heart</font>) or register for a trial subscription, we collect certain personal information, such as your name, address, and e-mail address. We use this information to process your order and for administration of your subscription. Your e-mail address is added to our electronic mailing list so that, from time to time, we can send you information about new features, additions, and changes to our Web site. If you do not want to receive e-mail alerts, you may indicate this on your registration form, and you can change this at any time by going to the Subscriber Services section and selecting "Edit your registration information." Also, <font class="textemphasis">Access</font>Medicine may occasionally make subscriber information available to other units within The McGraw-Hill Companies as well as to selected outside companies whose products or services we feel may be of interest to you.
 
-</p><p><font class="textemphasis">Harrison's Online</font> makes use of a type of cookie called a "session" cookie. Cookies are small bits of data that we send to your computer. We use them to improve your user experience. We use them to keep track of the fact that you have signed in so that you don't have to continually enter your user name and password as you move around the site. This type of cookie is removed as soon as you log out or close your browser.</p>
+</p><p><font class="textemphasis">Access</font>Medicine makes use of a type of cookie called a "session" cookie. Cookies are small bits of data that we send to your computer. We use them to improve your user experience. We use them to keep track of the fact that you have signed in so that you don't have to continually enter your user name and password as you move around the site. This type of cookie is removed as soon as you log out or close your browser.</p>
 
-<p>An IP address is a number that's automatically assigned to your computer whenever you're surfing the Web. Web servers — the big computers that "serve up" Web pages — automatically identify your computer by its IP address. We collect IP addresses for the purposes of system administration, to report aggregate information to our institutional customers, and to audit the use of our site. When visitors request pages from <font class="textemphasis">Harrison's Online</font>, our servers log the visitors' IP addresses. We do not normally link IP addresses to anything personally identifiable, which means that a user's session will be logged, but the user remains anonymous to us. We can and will use IP addresses to identify a user when we feel it is necessary to enforce compliance with our house rules or terms of service or to protect our service, site, customers, or others.</p>
+<p>An IP address is a number that's automatically assigned to your computer whenever you're surfing the Web. Web servers — the big computers that "serve up" Web pages — automatically identify your computer by its IP address. We collect IP addresses for the purposes of system administration, to report aggregate information to our institutional customers, and to audit the use of our site. When visitors request pages from <font class="textemphasis">Access</font>Medicine, our servers log the visitors' IP addresses. We do not normally link IP addresses to anything personally identifiable, which means that a user's session will be logged, but the user remains anonymous to us. We can and will use IP addresses to identify a user when we feel it is necessary to enforce compliance with our house rules or terms of service or to protect our service, site, customers, or others.</p>
 
 <p>Please be assured that we take your concerns about privacy quite seriously, and we intend to take every reasonable effort to protect it. To that end, The McGraw-Hill Companies has developed a comprehensive customer privacy policy. If you'd like more information about our use of customer data, please review <img src="/amed/public/all_images/icon_newwin.gif" width="30" height="9" alt="" border="0">&nbsp;<a href="http://www.mcgraw-hill.com/privacy.html" target="external">The McGraw-Hill Companies Customer Privacy Policy</a>.</p>
 
-<p>If you have questions or comments about our customer privacy policy or you would like to confirm the accuracy of the information collected from you, please contact <a href="mailto:judith_lee@mcgraw-hill.com">Judith Lee</a>, Vice President, Direct Marketing, for the Professional Book Group. If you are an individual trial user or an individual subscriber, you may also review and request changes to the information online at any time by going to the Subscriber Services section.</p>
+<p>If you have questions or comments about our customer privacy policy or you would like to confirm the accuracy of the information collected from you, please contact <a href="mailto:bob_bolick@mcgraw-hill.com">Robert Bolick</a>, Vice President &amp; Director, New Business Development, McGraw-Hill Professional. If you are an individual trial user or an individual subscriber, you may also review and request changes to the information online at any time by going to the Subscriber Services section.</p>
 
 <p>If you prefer not to receive promotional materials from companies outside The McGraw-Hill Companies, please submit the <a href="/amed/public/amed_terms/opt_out.html">Opt Out form</a>.</p>
 
@@ -143,12 +148,11 @@
 
 	<p class="footer"><a href="/amed/public/amed_terms/privacy.html">Customer Privacy Policy</a></p>
 
-<p class="footer"><font class="textbold">Copyright ©2001 The McGraw-Hill Companies. All rights reserved.</font>
+<p class="footer"><font class="textbold">Copyright ©2001-2002 The McGraw-Hill Companies. All rights reserved.</font>
 <br>
 Any use is subject to the <a href="/amed/public/amed_terms/terms.html">Terms of Use</a> and <a href="/amed/public/amed_terms/notice.html">Notice</a>. <a href="/amed/public/amed_terms/additional_credits.html">Additional credits</a> and
-copyright information. For further information about this site contact <a href="mailto:harrisons@romnet.com">harrisons@romnet.com</a>.<br>
-Last modified: TP-EDIT LD: 'LASTMODIFIED' UNDEFINED
-
+copyright information. For further information about this site contact <a href="mailto:tech_support@accessmedicine.com">tech_support@accessmedicine.com</a>.<br>
+Last modified: Jun  3 2002
 .</p>
 
 <p>&nbsp;</p>
@@ -216,11 +220,22 @@ Last modified: TP-EDIT LD: 'LASTMODIFIED' UNDEFINED
 	<tbody><tr>
 
 	<td valign="top" class="menutext" width="12">
-	<a href="/harrisons/public/index.html" class="tocmenu">•</a>
+	<a href="http://www.harrisonsonline.com/" class="tocmenu">•</a>
 	</td>
 
 	<td valign="top" class="menutext" width="165">
-	<a href="/harrisons/public/index.html" class="tocmenu">Harrison's Online</a>
+	<a href="http://www.harrisonsonline.com/" class="tocmenu">Harrison's Online</a>
+	</td>
+
+</tr>
+<tr>
+
+	<td valign="top" class="menutext" width="12">
+	<a href="http://cardiology.accessmedicine.com/" class="tocmenu">•</a>
+	</td>
+
+	<td valign="top" class="menutext" width="165">
+	<a href="http://cardiology.accessmedicine.com/" class="tocmenu">Hurst's The Heart</a>
 	</td>
 
 </tr>
@@ -243,8 +258,6 @@ Last modified: TP-EDIT LD: 'LASTMODIFIED' UNDEFINED
 <!-- END Publications Menu Object -->
 
 </noindex>
-
-
 
 
 </body></html>
