--- a/e/ev/evg/evga.com.html
+++ b/e/ev/evg/evga.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the evga.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201165904id_/http%3A//evga.com/policy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the evga.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604190756id_/http%3A//www.evga.com/policy.asp) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/home.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -56,7 +56,7 @@
       <table width="750" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr> 
           <td height="20"><img src="/images/topnav/eVGA_Nav_Tagline.gif" width="595" height="20"></td>
-          <td width="155" height="20" background="/images/topnavback.gif" align="right"><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><b>Users On-Line: 195</b></font>&nbsp;&nbsp;</td>
+          <td width="155" height="20" background="/images/topnavback.gif" align="right"><font face="Verdana, Arial, Helvetica, sans-serif" size="1"><b>Users On-Line: 117</b></font>&nbsp;&nbsp;</td>
         </tr>
       </tbody></table>
     </td>
@@ -66,7 +66,7 @@
       <table border="0" cellspacing="0" cellpadding="0" width="750" height="28" align="right" background="/images/TopNav/eVGA_Nav_back.gif">
         <tbody><tr> 
           <form action="/search/default.asp" method="POST"></form>
-            <td width="340" valign="top" align="left"><a href="/"><img src="/images/TopNav/eVGA_Nav_Home.gif" border="0"></a><a href="/support/downloads/"><img src="/images/TopNav/eVGA_Nav_Download.gif" border="0"></a></td>
+            <td width="340" valign="top" align="left"><a href="/"><img src="/images/TopNav/eVGA_Nav_Home.gif" border="0"></a><a href="/support/drivers/drivershow.asp"><img src="/images/TopNav/eVGA_Nav_Download.gif" border="0"></a></td>
             <td width="74" align="right" valign="top">&nbsp; </td>
             <td width="264" align="right"> 
               <input type="text" name="SearchString" size="20">
