--- a/h/hs/hsh/hsh.com.html
+++ b/h/hs/hsh/hsh.com.html
@@ -1,44 +1,47 @@
-<!--The following is the downloaded HTML source of the hsh.com privacy policy that was archived on 2001-10-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011004011820id_/http%3A//hsh.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hsh.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604191419id_/http%3A//www.hsh.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <title>HSH Associates: Disclaimers and our Privacy Policy</title>
 <meta name="resource-type" content="document">
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <meta name="description" content="Privacy policy of HSH Associates, Financial Publishers.">
-<meta name="keywords" content="Mortgage Rates, publisher, Privacy, Privacy Statement, HSH, Mortgage Information, best rates, loans, consumer finance">
-<meta name="distribution" content="global">
+<meta name="keywords" content="mortgages, mortgage rates, publisher, Privacy, Privacy Statement, HSH, Mortgage Information, best rates, loans, consumer finance">
 <link rel="StyleSheet" href="http://www.hsh.com/style.css" type="text/css" media="screen" title="Primary">
+<style type="text/css">
+P {font-size: smaller}
+</style>
 </head>
 
-<body bgcolor="white" background="images/bk-hsh.gif">
+<body background="images/bk-hsh.gif" bgcolor="White">
 
 <div align="center">
 <table border="0" width="95%">
 <tbody><tr>
-<td><a href="http://www.hsh.com/" title="Go to HSH's home page"><img src="images/hshlogo-only.gif" alt="HSH Associates, Financial Publishers" height="48" width="74" border="0"></a></td>
+<td><a href="http://www.hsh.com/" title="Go to HSH's home page"><img src="images/hshlogo-only.gif" alt="HSH Associates, Financial Publishers" width="74" height="48" border="0"></a></td>
 <td align="RIGHT"><h3>Privacy Policy</h3></td> </tr>
 <tr align="CENTER">
 <td colspan="2"><small><b><i><span class="seealso">See also:</span>&nbsp;</i>
-<a href="privacy-ext.html">Our Extended Privacy Statement</a></b></small></td> </tr>
+<a href="privacy-ext.html">Our Extended Privacy Statement</a></b></small></td></tr>
 </tbody></table>
 </div>
 
 <hr align="center" style="color: blue">
 
-<h2 align="Center">HSH Associates' Privacy Policy</h2>
+<h3 align="center">HSH Associates' Privacy Policy</h3>
 
-<div style="margin-left: 1em; margin-right: 1em;">
-<p>Homeplans.hsh.com is a subsidiary of 
-<a href="http://www.hsh.com/abouthsh.html">HSH Associates, Financial Publishers</a>.  We are totally committed to protecting your privacy. This is a summary of the various ways we treat the information you provide us while visiting our Web site.</p>
+<div style="margin-left: 2em; margin-right: 2em">
+<p>HSH.com, Homeplans.hsh.com, bestrates.com and bankrates.com are subsidiaries of <a href="http://www.hsh.com/abouthsh.html">HSH Associates, Financial Publishers</a>. We are totally committed to protecting your privacy. This is a summary of the various ways we treat the information you provide us while visiting our Web site.</p>
+
+<p>(If you believe that you were spammed by our Bestrates.com site, please
+<a href="http://www.hsh.com/spamalert.html">click here</a> to discover how the real spammer fooled you.)</p>
 
 <p>Since HSH was founded in 1979, it has been our policy to never sell personally identifying information about our customers.</p>
 
-<ul>
-<li style="display: block; list-style-type: circle;"> HSH does not collect personally identifying information, except with your specific knowledge and consent.</li>
+<ul style="display: block; list-style-type: circle; font-size: smaller">
+<li> HSH does not collect personally identifying information, except with your specific knowledge and consent.</li>
 
-<li style="display: block; list-style-type: circle;"> We <i>never</i> sell or offer contact information about our visitors to others. There's no need to send us an "opt out" message to prevent your name from appearing on a million mailing lists.</li>
-
-<!-- Our site doesn't use "cookies." -->
+<li> We <i>never</i> sell or offer contact information about our visitors to others. There's no need to send us an "opt out" message to prevent your name from appearing on a million mailing lists.</li>
 </ul>
 
 <!-- Click here to read our A HREF="http://www.hsh.com/privacy-ext.html" extended privacy Statement. -->
@@ -49,32 +52,33 @@
 <p>In other cases, we may <i>require</i> certain personal information -- such as when you fill out an order form on our site (or submit an order through any other means such as phone, fax or mail). In these cases, you must enter your name, address, and certain other information. The information you provide goes <b>only</b> to the designer(s) you select, so that they can fulfill your order.
 Obviously, we must collect this information so your order can be fulfilled.  We maintain the information you provide (other than credit card information) to evidence that you have purchased a product.</p>
 
-<div style="margin-left: 2em; margin-right: 2em;">
-<p>We never share any of your personally identifying data with any other party without your explicit permission, nor use it for unapproved commercial purposes.</p>
-</div>
+<p style="margin-left: 2.25em; margin-right: 2.25em">We never share any of your personally identifying data with any other party without your explicit permission, nor use it for unapproved commercial purposes.</p>
 
 <p>Some customers find it irritating that, when they re-order a product from us, we don't have their information on file. They need to give us their name, address, and other information every time they re-order. That's because we delete all computer references to your order 30 days after the product is shipped to you.</p>
 
 <p>We retain a <i>paper</i> record of your order for about six months, in case you need to call us. After that time, the paper record is destroyed as well.</p>
 
-<p>We may <i>offer</i> to send you information or updates from HSH Associates via e-mail or otherwise. Obviously, signing up will put you on a specific mailing list. We will <i>not</i> put you on any other mailing lists, from us or anyone else, without your permission.</p>
+<p>We may <i>offer</i> to send you information or updates from HSH Associates via e-mail or otherwise, such as HSH's <a href="http://www.hsh.com/trends.html#form">Weekly Market Trends mailing list</a>. Obviously, signing up will put you on a specific mailing list. We will <i>not</i> put you on any other mailing lists, from us or anyone else, without your permission.</p>
 
-<!-- You may have read about "cookies". Sent to your computer by some Web sites, cookies contain information such as registration information, or similar data, which is stored on your hard drive and sent back to a site when you revisit it. [I]HSH Associates does not use cookies[/I] -- it's that simple. (Most browsers have an option to warn you when a site wants to place a 'cookie' on your computer. Try it and see.)-->
+<p style="margin-left: 1em; margin-right: 1em"><b>About "cookies."</b> Some Web sites use cookies which contain information such as registration information, or similar data, which is stored on your hard drive and sent back to a site when you revisit it. HSH Associates does not, as a rule, use cookies. The only exception is our Homeplans site, which uses cookies <i>only while you
+are visiting that site</i> ('session ID' cookies) and which are <i>not</i> placed by, or sent to, any third party. 
+<a href="http://homeplans.hsh.com/cookies.asp">Click here</a> to read more about our use of these cookies.</p>
 
-<p>Finally, while your individual information is protected as outlined above, we do analyze our 'hit' logs to see how we're doing; but we only use aggregated, anonymous data about our users as a group. For instance, we like to know that a certain percentage of our users appear to be in the market for a certain loan type, based on the pages they view.</p>
+<p style="margin-left: 1em; margin-right: 1em"><b>If you are receiving "mortgage-rate" spam,</b> it's not because of us. If you have visited any other mortgage rate sites, <i>read their privacy policy carefully.</i></p>
 
-<p>Our privacy policy may be modified from time to time; the last update was on June 2, 2000.</p>
+<p>Finally, while your individual information is protected as outlined above, we do analyze our 'hit' logs to see how we're doing. However, we only use aggregated, anonymous data about our users as a group. For instance, we like to know that a certain percentage of our users appear to be in the market for a certain loan type, based on the pages they view.</p>
+
+<p>Our privacy policy may be modified from time to time; the last update was on April 8, 2002.</p>
 
 <a name="contact"></a>
 <p>If you ever have any concerns or questions about our privacy policy, please <a href="mailto:info@hsh.com">send us e-mail</a>.  We welcome your feedback.  You can also write to us at the following address:</p>
 </div>
 
-<div style="margin-left: 3em">
-<h5>HSH Associates, Financial Publishers
+<h5 style="margin-left: 3em">HSH Associates, Financial Publishers
 <br>1200 Route 23
 <br>Butler, NJ 07405
 <br>800-873-2837 | 973-838-3330</h5>
-</div> <br>
+<br>
 
 
 
@@ -83,7 +87,7 @@ Obviously, we must collect this information so your order can be fulfilled.  We 
 <div align="center">
 <table border="0" width="86%" cellpadding="2" cellspacing="2" class="navbar">
 <tbody><tr valign="middle">
-<td colspan="4"><!--#exec cgi="http://www.hsh.com/cgi-bin/referer.pl" --></td> </tr>
+<td colspan="4"><!--#exec cgi="http://www.hsh.com/cgi-bin/referer.pl" --></td></tr>
 <tr valign="middle">
 <td><a class="navbar" href="http://www.hsh.com/lshow.html" title="Find a Mortgage">
 <small><b>Find a Mortgage</b></small></a></td>
@@ -92,7 +96,7 @@ Obviously, we must collect this information so your order can be fulfilled.  We 
 <td><a class="navbar" href="http://www.hsh.com/trends.html" title="Our Weekly Commentary and Forecast">
 <small>Market Forecast</small></a></td>
 <td><a class="navbar" href="http://www.hsh.com/comm-showcase.html" title="Find a Lender">
-<small>Commercial Loans</small></a></td> </tr>
+<small>Commercial Loans</small></a></td></tr>
 <tr valign="middle">
 <td><a class="navbar" href="http://www.hsh.com/heq-showcase.html" title="Find a Lender">
 <small>Home Equity Loans</small></a></td>
@@ -104,7 +108,7 @@ Obviously, we must collect this information so your order can be fulfilled.  We 
 <small>HSH Products</small></a></td></tr>
 <tr>
 <td><a class="navbar" href="http://www.hsh.com/today.html" title="Daily Statistics from our 2,000-Lender Survey">
-<small><i>Today's</i> Averages</small></a> </td>
+<small><i>Today's</i> Averages</small></a></td>
 <td><a class="navbar" href="http://www.hsh.com/mtgrates.html" title="Rates from HSH's Editorial Survey">
 <small>Mortgage Rates!</small></a></td>
 <td><a class="navbar" href="http://www.hsh.com/calculators.html" title="Loan Calculators Galore!">
@@ -114,11 +118,11 @@ Obviously, we must collect this information so your order can be fulfilled.  We 
 <tr valign="middle">
 <td><a class="navbar" href="http://www.hsh.com/abouthsh.html" title="About Your Hosts"><small>About HSH</small></a>
 </td><td><a href="http://www.hsh.com/" title="HSH Home Page"><small><i><span class="seealso">HSH Home Page</span></i></small></a>
-</td><td><a class="navbar" href="mailto:info@hsh.com" title="Talk to Us"><small>Email HSH</small></a></td>
-<td><a class="navbar" href="http://www.hsh.com/refer2friend.html" title="Recommend Our Site"><small><i>Tell a Friend!</i></small></a></td></tr>
-</tbody></table>
-</div>
+</td><td><a class="navbar" href="http://www.hsh.com/bnbform.html" title="Talk to Us"><small>Email HSH</small></a></td>
+<td>&nbsp; <!-- A CLASS="navbar" HREF="http://www.hsh.com/refer2friend.html" TITLE="Recommend Our Site"}{SMALL}{I}Tell a Friend!{/I}{/SMALL}{/A}</TD></TR>
+</TABLE>
+</DIV>
 
-
-
-</body></html>
+</BODY>
+</HTML>
+--></td></tr></tbody></table></div></body></html>
