--- a/f/fe/fer/fertilethoughts.com.html
+++ b/f/fe/fer/fertilethoughts.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the fertilethoughts.com privacy policy that was archived on 2001-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011202001513id_/http%3A//www.fertilethoughts.net/privacystatement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the fertilethoughts.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604191852id_/http%3A//www.fertilethoughts.net/privacystatement.html) for the most accurate reproduction.-->
 
 <html><head><style type="text/css"><!--
 
@@ -40,7 +40,7 @@ a { color: #696969; text-decoration: none }-->
 
 				<td valign="center" bgcolor="#f8dcf0" height="53" width="100%">
 
-					<div align="center"><a href="http://www.qksrv.net/click-933825-5934445" target="_top" onmouseover="window.status='http://www.ebay.com';return true;" onmouseout="window.status=' ';return true;">  <img src="http://www.qksrv.net/image-933825-5934445" width="468" height="60" alt="Find the Greatest Gift of All at eBay!" border="0"></a>
+					<div align="center"><a href="http://www.fertilethoughts.net/cgi-fertile/banner/infertility.pl?banner=fm-stress-direct;time=1023218327;zone=infertility" target="_blank"><img src="http://www.fertilethoughts.net/mybanners/pix/fmjhbanner.gif" height="60" width="468" alt="Click Here" border="0"></a>
 						</div>
 
 				</td>
@@ -156,7 +156,7 @@ a { color: #696969; text-decoration: none }-->
       <p>
       <table bgcolor="#666666" border="0" cellpadding="3" cellspacing="3" width="100%">
         <tbody><tr height="14">
-          <td align="middle" bgcolor="#f1f1f1" height="14" valign="top" width="24%"><font color="#666666" face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"><b><a href="http://www.fertilethoughts.net/infertility/interact/bb1/bb/messages/forums.html">Bulletin 
+          <td align="middle" bgcolor="#f1f1f1" height="14" valign="top" width="24%"><font color="#666666" face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"><b><a href="http://www.fertilethoughts.net/php/forums/index.php">Bulletin 
             Boards</a></b></font> </td>
           <td align="middle" bgcolor="#f1f1f1" height="14" width="19%"><font color="#666666" face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="2"><b><a href="http://www.fertilethoughts.net/chat/chatentro.html">Chatrooms</a></b></font> 
           </td>
@@ -288,9 +288,7 @@ a { color: #696969; text-decoration: none }-->
 						<div align="center">
 							<font size="1"></font><font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="1">&nbsp;</font></div>
 						<div align="center">
-							<center><font size="3" face="Arial" color="#0000ff"> <a href="http://www.fertilethoughts.net/" target="_parent">HOME</a><br>[<a href="http://www.fertilethoughts.net/chat/chatentro.html">Chatrooms</a>] [<a href="http://www.fertilethoughts.net/infertility/interact/bb1/bb/messages/forums.html">Bulletin Boards</a>]  <p>   </p></font></center><font size="3" face="Arial" color="#0000ff"> <center><hr width="50%"><font face="Verdana" size="-2" color="#660066">© 1999-2000 FertileThoughts, Inc. All Right Reserved. </font><br><br></center>   </font> <br>
-
-<font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="1">Site Maintained by <a href="http://yrd.com/">Yard 
+							<font face="Arial,Helvetica,Geneva,Swiss,SunSans-Regular" size="1">Site Maintained by <a href="http://yrd.com/">Yard 
       Interactive<br>
 									<br>
 								</a></font></div>
