--- a/i/in/inf/infobanc.com.html
+++ b/i/in/inf/infobanc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the infobanc.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204210910id_/http%3A//infobanc.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the infobanc.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604192132id_/http%3A//www.infobanc.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy Policy of The Great Indian Bazaar </title>
