--- a/i/in/inm/inmatrix.com.html
+++ b/i/in/inm/inmatrix.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the inmatrix.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205220359id_/http%3A//www.inmatrix.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the inmatrix.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605031030id_/http%3A//www.inmatrix.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -36,21 +36,21 @@ served an Inmatrix page, Inmatrix may assign a unique random number to your comp
 browser - commonly known as a "cookie." We do this to save you the trouble of entering
 the same data repeatedly (your user name in the forum as an example).
 Most web browsers automatically accept cookies, but you can usually
-change your browser to prevent that use if you desire. 
+change your browser to prevent that use if you desire.
 <br><br><br>
 <b>Disclosure</b>
 <br><br>
 Inmatrix openly volunteers its practices of collecting information, its targeting
 capabilities, and its use of cookies. If you have any questions pertaining to this privacy
-policy and its contents, please direct your correspondence to blight@inmatrix.com. 
+policy and its contents, please direct your correspondence to our <a href="http://www.inmatrix.com/email.shtml">eMail</a>.
 <br><br>
 Inmatrix reserves the right to change our policy from time to time. A revised policy will
-apply to information collected after the date the policy is changed. 
+apply to information collected after the date the policy is changed.
 </p></font></td></tr></tbody></table>
 
 <br><br><br><br><br>
 
-<a href="index.shtml#articles"><img src="pictures/buttons/back_black.gif" width="70" height="25" border="0"></a>
+<a href="index.shtml"><img src="pictures/buttons/back_black.gif" width="70" height="25" border="0"></a>
 
 <br><br>
 
