--- a/f/fo/fox/foxsearchlight.com.html
+++ b/f/fo/fox/foxsearchlight.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the foxsearchlight.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204215817id_/http%3A//www.foxsearchlight.com/terms.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the foxsearchlight.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605032707id_/http%3A//foxsearchlight.com/terms.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Untitled Document</title>
