hboondemand.com (archived on 2002-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 8670,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.38,
  "homepage_snapshot_redirected_domain": "hboondemand.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020526204516id_/http://www.hboondemand.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020526204516id_/http%3A//hboondemand.com",
  "interval": "2002_A",
  "link_text": "HBO PRIVACY POLICY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "hbo.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020605033112id_/http%3A//www.hbo.com/corpinfo/privacy.shtml",
  "policy_title": "HBO.com: Corporate Information: Privacy Policy",
  "policy_url": "hbo.com/corpinfo/privacy.shtml",
  "sha1": "f2e3fe25f41b8de7b492cf91477b46b2e85941d4",
  "simhash": 13170187974158202365,
  "simhash_updated": true,
  "site_hostname": "hboondemand.com",
  "site_url": "http://hboondemand.com",
  "smog": 16.03,
  "strict_updated": true,
  "timestamp": "20020605033112",
  "word_count": 1415,
  "year": 2002
}

--- a/h/hb/hbo/hboondemand.com.html
+++ b/h/hb/hbo/hboondemand.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hboondemand.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211173107id_/http%3A//www.hbo.com/corpinfo/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hboondemand.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605033112id_/http%3A//www.hbo.com/corpinfo/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
 <title>HBO.com: Corporate Information: Privacy Policy</title>
@@ -21,141 +21,102 @@
 <table cellpadding="0" cellspacing="0" border="0" width="760"><tbody><tr><td>
 
 <!-- hat -->
-<table cellpadding="0" cellspacing="0" border="0" width="100%" bgcolor="#006699">
-
-  <tbody><tr>
-
-	<td bgcolor="#006699"><img src="/img/core_template/spacer.gif" width="1" height="3" border="0"></td>
-
-  </tr>
-
-  <tr>
-	<td bgcolor="#006699">
-	  <script language="Javascript">
-tophat=("<IFRAME SRC=\"http://toolbar.netscape.com/tw_hat/iframe/filter_hbo.html\" WIDTH=\"100%\" FRAMEBORDER=\"0\" HEIGHT=\"24\" MARGINHEIGHT=\"0\" MARGINWIDTH=\"0\" SCROLLING=\"no\" >\n");
+<table cellpadding="0" cellspacing="0" border="0" width="760" bgcolor="#006699">
+<tbody><tr>
+<td bgcolor="#006699"><img src="/img/core_template/spacer.gif" width="1" height="3" border="0"></td>
+</tr>
+<tr>
+<td bgcolor="#006699">
+<script language="Javascript">tophat=("<IFRAME SRC=\"http://toolbar.netscape.com/tw_hat/iframe/filter_hbo.html\" WIDTH=\"760\" FRAMEBORDER=\"0\" HEIGHT=\"24\" MARGINHEIGHT=\"0\" MARGINWIDTH=\"0\" SCROLLING=\"no\" >\n");
 middlehat = "";
-bottomhat=("\n</IFRAME>\n");
-</script>
-	  <script language="Javascript" src="http://toolbar.netscape.com/toolbar.twhat?template=ua_dt&amp;dom=hbo">
-</script>
-	  <script language="Javascript">
-document.write(tophat + middlehat + bottomhat);
-</script><iframe src="http://toolbar.netscape.com/tw_hat/iframe/filter_hbo.html" width="100%" frameborder="0" height="24" marginheight="0" marginwidth="0" scrolling="no">
+bottomhat=("\n</IFRAME>\n");</script>
+<script language="Javascript" src="http://toolbar.netscape.com/toolbar.twhat?template=ua_dt&amp;dom=hbo"></script>
+<script language="Javascript">document.write(tophat + middlehat + bottomhat);</script><iframe src="http://toolbar.netscape.com/tw_hat/iframe/filter_hbo.html" width="760" frameborder="0" height="24" marginheight="0" marginwidth="0" scrolling="no">
 
 </iframe>
 
-	  <noscript>
-	  <!-- -->
-	  <table width="100%" height="24" cellpadding="0" cellspacing="0" border="0" hspace="0" vspace="0" background="#006699">
-		<tr>
-		  <td bgcolor="#006699" align="left">
-			<!-- -->
-			<font face="Arial, Helvetica, sans-serif" size=1 color=#ffffff> Welcome!
-			</font></td>
-		  <!-- -->
-		  <td bgcolor="#006699" align="right" width="374"> <a href="http://toolbar.netscape.com/nojs.twhat" target="NetscapeHat"><img src="http://toolbar.netscape.com/tw_hat/chaos.gif" height="24" width="373" align="right" border="0" hspace="0" vspace="0" alt="Netscape Products and Services" ismap >
-			<!-- -->
-			</a></td>
-			
-		</tr>
-  
-	  </table>
 
-	  </noscript> </td>
-  </tr>
-
-
-  <tr>
-
-	<td bgcolor="#006699"><img src="/img/core_template/spacer.gif" width="1" height="3" border="0"></td>
-
-  </tr>
-
+	<noscript>
+	<table width="760" height="24" cellpadding="0" cellspacing="0" border="0" hspace="0" vspace="0" background="#006699">
+	<tr>
+	<td bgcolor="#006699" align="left"><font face="Arial, Helvetica, sans-serif" size="1" color="#ffffff"> Welcome!</font></td>
+	<td bgcolor="#006699" align="right" width="374"> <a href="http://toolbar.netscape.com/nojs.twhat" target="NetscapeHat"><img src="http://toolbar.netscape.com/tw_hat/chaos.gif" height="24" width="373" align="right" border="0" hspace="0" vspace="0" alt="Netscape Products and Services" ismap ></a></td>
+	</tr>
+	</table>
+	</noscript>
+</td>
+</tr>
+<tr>
+<td bgcolor="#006699"><img src="/img/core_template/spacer.gif" width="1" height="3" border="0"></td>
+</tr>
 </tbody></table>
-
 <!-- /hat -->
 
 
-<!-- IF PREVIEWING, DISPLAY WITH FONT STYLES.  IF GENERATING, DISPLAY WITHOUT -->
 
 
-
-
-
-<!-- END PERL PREVIEW BLOCK -->
-
-<!-- BEGIN CDATA -->
 
 <!-- header -->
 <table width="760" border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr>
-	<td width="479" valign="top"><a href="http://www.hbo.com" target="_top"><img src="/img/hbo_headers/logo_hbo.jpg" alt="HBO: Its not TV. Its HBO." width="479" height="65" border="0"></a></td>
-	<td align="right" width="277" valign="top">
-	  <table border="0" cellspacing="2" cellpadding="0">
-		<tbody><tr>
-		  <!-- hbo express link -->
-		  <td colspan="3" align="right"><a href="http://www.hbo.com/NASApp/hboxpress/jsp/get_hbo.jsp"><img src="/img/hbo_header_promos/btn_order_hbo_online_red.gif" alt="HBO Express" height="34" border="0"></a></td>
-		  <!-- /hbo express link -->
-		</tr>
-		<tr>
-		  <!-- search hbo for box -->
-<form name="searchform" method="get" action="http://search.hbo.com/compass"></form>
-			<td class="topnav-search">SEARCH HBO</td>
-			<td><font size="2">
-   			  <input type="hidden" name="ui" value="sr">
-   			  <input type="hidden" name="chunk-size" value="">
-   			  <input type="hidden" name="page" value="">
-   			  <input type="hidden" name="view-template" value="hbo">
-    			  <input type="text" name="scope" size="15">
-			  </font>
-			</td>
-			<td>
-			  <input type="image" border="0" name="imageField" src="/img/core_template/btn_go_grey.gif" width="25" height="19" alt="GO">
-			</td>
-		  
-		  <!-- /search hbo for box -->
-		</tr>
-	  </tbody></table>
-	  <img src="/img/core_template/spacer.gif" alt="" width="277" height="1"></td>
-	<td width="4"><img src="/img/core_template/spacer.gif" alt="" width="4" height="1"></td>
-  </tr>
-</tbody></table><script language="Javascript1.2">window.name = "MAIN";</script>
+<tbody><tr>
+<td width="479" valign="top"><a href="http://www.hbo.com" target="_top"><img src="/img/hbo_headers/logo_hbo.jpg" alt="HBO: Its not TV. Its HBO." width="479" height="65" border="0"></a></td>
+<td align="right" width="277" valign="top">
+	<table border="0" cellspacing="2" cellpadding="0">
+	<tbody><tr>
+	<!-- hbo express link -->
+	<td colspan="3" align="right"><a href="http://www.hbo.com/NASApp/hboxpress/jsp/get_hbo.jsp"><img src="/img/hbo_header_promos/btn_order_hbo_online_red.gif" alt="HBO Express" height="34" border="0"></a></td>
+	<!-- /hbo express link -->
+	</tr>
+	<tr>
+	<!-- search hbo for box -->
+	<form name="searchform" method="get" action="http://search.hbo.com/compass"></form>
+	<td class="topnav-search">SEARCH HBO</td>
+	<td><font size="2">
+   	<input type="hidden" name="ui" value="sr">
+   	<input type="hidden" name="chunk-size" value="">
+   	<input type="hidden" name="page" value="">
+   	<input type="hidden" name="view-template" value="hbo">
+    	<input type="text" name="scope" size="15">
+	</font></td>
+	<td><input type="image" border="0" name="imageField" src="/img/core_template/btn_go_grey.gif" width="25" height="19" alt="GO"></td>
+	
+	<!-- /search hbo for box -->
+	</tr>
+	</tbody></table>
+<img src="/img/core_template/spacer.gif" alt="" width="277" height="1"></td>
+<td width="4"><img src="/img/core_template/spacer.gif" alt="" width="4" height="1"></td>
+</tr>
+</tbody></table>
+<script language="Javascript1.2">window.name = "MAIN";</script>
 <!-- /header -->
 
 
-<!-- IF PREVIEWING, CLOSE BODY, CLOSE HTML.  IF GENERATING, DISPLAY WITHOUT -->
 
-<!-- END CDATA -->
-
-
-<!-- -->
-
-
-<!-- top navigation -->
+<!-- default top navigation -->
 <table width="760" border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr>
-	<td width="8"><img src="/img/core_template/spacer.gif" alt="" width="8" height="1"></td>
-	<td nowrap="" align="center">&nbsp;</td>
-	<td width="9">&nbsp;</td>
-	<td nowrap="" align="center"><a href="#" class="topnav-link"> </a></td>
-	<td width="9">&nbsp;</td>
-	<td nowrap="" align="center">&nbsp;</td>
-	<td width="9">&nbsp;</td>
-	<td align="center">&nbsp;</td>
-	<td width="9">&nbsp;</td>
-	<td align="center">&nbsp;</td>
-	<td width="9">&nbsp;</td>
-	<td nowrap="" align="center"><a href="#" class="topnav-link"> </a></td>
-	<td width="9">&nbsp;</td>
-	<td align="center">&nbsp;</td>
-	<td width="9">&nbsp;</td>
-	<td nowrap="" align="center"><a href="#" class="topnav-link"> </a></td>
-	<td width="9">&nbsp;</td>
-	<td align="center">&nbsp;</td>
-	<td width="4"><img src="/img/core_template/spacer.gif" alt="" width="4" height="1"></td>
-  </tr>
+<tbody><tr bgcolor="#ffffff">
+<td width="8"><img src="/img/core_template/spacer.gif" alt="" width="8" height="1"></td>
+<td nowrap="" align="center"><a href="/" class="topnav-link">HOME</a></td>
+<td width="9"><img src="/img/core_template/dots_vertical_topnav.gif" alt="|" width="1" height="19" hspace="4"></td>
+<td nowrap="" align="center"><a href="/series/" class="topnav-link">ORIGINAL SERIES</a></td>
+<td width="9"><img src="/img/core_template/dots_vertical_topnav.gif" alt="|" width="1" height="19" hspace="4"></td>
+<td nowrap="" align="center"><a href="/premieres/" class="topnav-link">MOVIE PREMIERES</a></td>
+<td width="9"><img src="/img/core_template/dots_vertical_topnav.gif" alt="|" width="1" height="19" hspace="4"></td>
+<td align="center"><a href="/sports/" class="topnav-link">SPORTS</a></td>
+<td width="9"><img src="/img/core_template/dots_vertical_topnav.gif" alt="|" width="1" height="19" hspace="4"></td>
+<td align="center"><a href="/docs/" class="topnav-link">DOCUMENTARIES</a></td>
+<td width="9"><img src="/img/core_template/dots_vertical_topnav.gif" alt="|" width="1" height="19" hspace="4"></td>
+<td nowrap="" align="center"><a href="/films/" class="topnav-link">HBO FILMS</a></td>
+<td width="9"><img src="/img/core_template/dots_vertical_topnav.gif" alt="|" width="1" height="19" hspace="4"></td>
+<td align="center"><a href="/schedule/bin/supersched2.cgi" class="topnav-link">SCHEDULE</a></td>
+<td width="9"><img src="/img/core_template/dots_vertical_topnav.gif" alt="|" width="1" height="19" hspace="4"></td>
+<td nowrap="" align="center"><a href="/screening/" class="topnav-link">SCREENING ROOM</a></td>
+<td width="9"><img src="/img/core_template/dots_vertical_topnav.gif" alt="|" width="1" height="19" hspace="4"></td>
+<td align="center"><a href="http://store.hbo.com" class="topnav-link">STORE</a></td>
+<td width="4"><img src="/img/core_template/spacer.gif" alt="" width="4" height="1"></td>
+</tr>
 </tbody></table>
-<!-- /top navigation -->
+<!-- /default top navigation -->
 
 </td></tr></tbody></table>
 
@@ -314,6 +275,17 @@ document.write(tophat + middlehat + bottomhat);
 		
 		
 		
+		<!-- corporate information sections -->
+		<tr>
+		  <td width="5"><img src="/img/core_template/spacer.gif" alt="" width="5" height="18"></td>
+		  <td width="180"><img src="/img/core_template/nav_arrow.gif" alt="" width="4" height="7">&nbsp;<a href="/corpinfo/hboproperties.shtml" class="leftnav-link">Merchandising</a></td>
+		</tr>
+		<tr>
+		  <td colspan="2" bgcolor="#999999"><img src="/img/core_template/dots_light_on_white.gif" alt="" width="185" height="1"></td>
+		</tr>
+		
+		
+		
 	   </tbody></table>
 <!-- /left nav corporate -->
 
@@ -434,96 +406,33 @@ If you have any questions or concerns about the Time Warner online policy for th
 <!-- footer -->
 
 
-<!-- IF PREVIEWING, DISPLAY WITH STYLES.  IF GENERATING, DISPLAY WITHOUT -->
 
-
-
-
-
-<!-- END PERL PREVIEW BLOCK -->
-
-<!-- BEGIN CDATA -->
 
 
 <script language="javascript" src="/scripts/winopen.js"></script>
-	
 <table width="760" border="0" cellpadding="0" cellspacing="0">
-  <tbody><tr>
-	<td colspan="2"><img src="/img/core_template/spacer.gif" alt="" width="1" height="20"></td>
-  </tr>
-  <tr>
-	<td width="9"><img src="/img/core_template/spacer.gif" alt="" width="9" height="1"></td>
-	<td background="/img/core_template/dots_light_on_white.gif"><img src="/img/core_template/spacer.gif" alt="" width="1" height="1"></td>
-  </tr>
-  <tr>
-	<td colspan="2"><img src="/img/core_template/spacer.gif" alt="" width="1" height="8"></td>
-  </tr>
-  <tr>
-
-	<td width="9"><img src="/img/core_template/spacer.gif" alt="" width="9" height="1"></td>
-
-	<td class="footer-text">
-
-<!-- END CDATA -->
-	
-<!-- BEGIN CDATA -->
-
-		<a href="#" onclick="WinOpen('500','520','/corpinfo/privacy.html','scrollbars=yes');" class="footer-link">HBO PRIVACY POLICY</a>&nbsp;&nbsp;&nbsp;&nbsp;
-
-<!-- END CDATA -->
-	
-<!-- BEGIN CDATA -->
-
-		<a href="/corpinfo/loginregister.shtml" class="footer-link">REGISTER</a>&nbsp;&nbsp;&nbsp;&nbsp;
-
-<!-- END CDATA -->
-	
-<!-- BEGIN CDATA -->
-
-		<a href="/corpinfo/help.shtml" class="footer-link">SITE INDEX/HELP</a>&nbsp;&nbsp;&nbsp;&nbsp;
-
-<!-- END CDATA -->
-	
-<!-- BEGIN CDATA -->
-
-		<a href="/corpinfo/faq.shtml" class="footer-link">CORPORATE INFORMATION/F.A.Q.</a>&nbsp;&nbsp;&nbsp;&nbsp;
-
-<!-- END CDATA -->
-	
-<!-- BEGIN CDATA -->
-
-		<a href="http://www.aol.com" class="footer-link">TRY AOL FREE</a>&nbsp;&nbsp;&nbsp;&nbsp;
-
-<!-- END CDATA -->
-	
-<!-- BEGIN CDATA -->
-
-	<br>&nbsp;<br>
-
-	This website is intended for viewing solely within the United States. ©2001 Home Box Office, a Division of Time Warner Entertainment Company, L.P. All Rights Reserved. Home Box Office®, HBO®, Cinemax®, HBO Signature®, HBO Family®, HBO Plus®, HBO Comedy®, and HBO Zone® are  service marks of Time Warner Entertainment Company, L.P.
- 
- 
-
-
-
-
-	</td>
-	
-  </tr>
-  <tr>
-	<td colspan="2"><img src="/img/core_template/spacer.gif" alt="" width="1" height="20"></td>
-  </tr>
+<tbody><tr>
+<td colspan="2"><img src="/img/core_template/spacer.gif" alt="" width="1" height="20"></td>
+</tr>
+<tr>
+<td width="9"><img src="/img/core_template/spacer.gif" alt="" width="9" height="1"></td>
+<td background="/img/core_template/dots_light_on_white.gif"><img src="/img/core_template/spacer.gif" alt="" width="1" height="1"></td>
+</tr>
+<tr>
+<td colspan="2"><img src="/img/core_template/spacer.gif" alt="" width="1" height="8"></td>
+</tr>
+<tr>
+<td width="9"><img src="/img/core_template/spacer.gif" alt="" width="9" height="1"></td>
+<td class="footer-text"><a href="#" onclick="WinOpen('500','520','/corpinfo/privacy.html','scrollbars=yes');" class="footer-link">HBO PRIVACY POLICY</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/corpinfo/loginregister.shtml" class="footer-link">REGISTER</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/corpinfo/help.shtml" class="footer-link">SITE INDEX/HELP</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="/corpinfo/faq.shtml" class="footer-link">F.A.Q.</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://wss.alexus.com/wss/start.asp?application=jss&amp;group=twi&amp;function=HBO&amp;subfunction=Welcome" class="footer-link">JOBS AT HBO</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.aol.com" class="footer-link">TRY AOL FREE</a>&nbsp;&nbsp;&nbsp;&nbsp;
+<br>&nbsp;<br>
+This website is intended for viewing solely within the United States. ©2002 Home Box Office, a Division of Time Warner Entertainment Company, L.P. All Rights Reserved. Home Box Office®, HBO®, Cinemax®, HBO Signature®, HBO Family®, HBO Plus®, HBO Comedy®, HBO Zone®, The Sopranos®, Sex and the City®, Six Feet Under<sup><span style="font-size:8px">SM</span></sup>, and Oz<sup><span style="font-size:8px">SM</span></sup> are service marks of Time Warner Entertainment Company, L.P.
+</td>
+</tr>
+<tr>
+<td colspan="2"><img src="/img/core_template/spacer.gif" alt="" width="1" height="20"></td>
+</tr>
 </tbody></table>
 
-
-
-
-<!-- IF PREVIEWING, CLOSE BODY, CLOSE HTML.  IF GENERATING, DISPLAY WITHOUT -->
-
-<!-- END CDATA -->
-
-
-<!-- -->
 
 
 <!-- /footer -->
