--- a/h/ho/hob/hob.com.html
+++ b/h/ho/hob/hob.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hob.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204182947id_/http%3A//hob.com/support/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hob.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605034005id_/http%3A//www.hob.com/support/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 	 <title>Privacy : HOB.com</title>
@@ -26,14 +26,14 @@
 		<table border="0" cellpadding="0" cellspacing="0" width="500" bgcolor="#ffffff">
 			<tbody><tr>
 				<td bgcolor="#ffffff" align="center" class="copy">
-				<img height="105" width="485" alt="HOB logo header" src="/pics/support/header.gif">
+				<a href="http://www.hob.com"><img height="105" width="485" border="0" alt="HOB logo header" src="/pics/support/header.gif"></a>
 					</td>
 				</tr>
-			<tr>
+			<!--<tr>
 				<td bgcolor="#ffffff" align="center" class="smallcopy">
 				<a href="http://www.hob.com" class="standard">HOB.com</a>
 					</td>
-				<!--<td bgcolor="#ffffff" align="center" class="smallcopy">
+				<td bgcolor="#ffffff" align="center" class="smallcopy">
 				<a href="http://www.hobcountry.com" class="standard">HOBCountry.com</a>
 					</td>
 				<td bgcolor="#ffffff" align="center" class="smallcopy">
@@ -41,8 +41,8 @@
 					</td>
 				<td bgcolor="#ffffff" align="center" class="smallcopy">
 					<a href="http://www.hobpm.com" class="standard">hobpm.com</a>
-					</td>-->
-				</tr>
+					</td>
+				</tr>-->
 			</tbody></table><br>
 
 		</td>
@@ -265,7 +265,7 @@
 	<table align="center">
 		<tbody><tr>
 			<td align="left" class="smallcopy">
-				<a href="/support/copyright.asp" class="standard">Copyright</a> © 1995-2001 House of Blues Digital, Inc. All rights reserved.<br>
+				<a href="/support/copyright.asp" class="standard">Copyright</a> © 2002 House of Blues Digital, Inc. All rights reserved.<br>
 				How does HOB.com protect your information? <a href="/support/privacy.asp" class="standard">See our privacy policy</a>.
 				</td>
 			</tr>
