hostek.com (archived on 2002-06-05)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 5685,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.09,
  "homepage_snapshot_redirected_domain": "hostek.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020328074444id_/http://www.hostek.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020328074444id_/http%3A//hostek.com",
  "interval": "2002_A",
  "link_text": "HosTek.com Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "hostek.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020605034802id_/http%3A//www.hostek.com/privacy.shtml",
  "policy_title": "HosTek - Web Hosting - Ministry Special",
  "policy_url": "hostek.com/privacy.shtml",
  "sha1": "3f6dcd100819ffe38b9842aea81d41eca3b5c2c4",
  "simhash": 14480499437415654767,
  "simhash_updated": false,
  "site_hostname": "hostek.com",
  "site_url": "http://hostek.com",
  "smog": 13.77,
  "strict_updated": false,
  "timestamp": "20020605034802",
  "word_count": 930,
  "year": 2002
}

--- a/h/ho/hos/hostek.com.html
+++ b/h/ho/hos/hostek.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hostek.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214085346id_/http%3A//hostek.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hostek.com privacy policy that was archived on 2002-06-05.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020605034802id_/http%3A//www.hostek.com/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -58,7 +58,6 @@ function di(id,name){
 
 
 
-<!--BODY background="images/leftbar4.jpg" bgproperties="fixed" BGCOLOR="#FFFFFF" LINK="#000066" TEXT="000066" VLINK="#000066"-->
 <body background="images/globeonlybg.jpg" bgproperties="fixed" bgcolor="#FFFFFF" link="#000066" text="000066" vlink="#000066">
 
 
@@ -69,13 +68,12 @@ function di(id,name){
 	<table border="0" width="600" cellspacing="0" cellpadding="0">
           <tbody><tr valign="TOP">
             <td width="180" align="RIGHT">
-              <img src="images/hostek_3Dlogo80.gif" border="0" height="75" width="173" alt="Hostek Logo - Web Hosting starting at $9.95/month., web page hosting, web site hosting, NT or UNIX, ASP, CGI">
+              <img src="images/hostek_3Dlogo80.gif" border="0" height="75" width="173" alt="web hosting services, reliable web hosting services, dependable web hosting services, professional web hosting services">
             </td>
             <td width="80">
               &nbsp;
             </td>
-            <td width="300"><br>
-<a href="plans.shtml"><img src="images/top_anim.gif" border="0" width="279" height="76" alt="Complete Web Hosting Solutions - NT web hosting, Unix web hosting, ASP web hosting, CGI-BIN, SSI"></a>
+            <td width="300"> 
             </td>
           </tr>
         </tbody></table>
@@ -83,7 +81,7 @@ function di(id,name){
   <table width="600" border="0" cellpadding="0" cellspacing="0" bgcolor="FFFFFF">
     <tbody><tr>
       <td><center>
-<a href="index.htm" onmouseover="di('home', 'home_over');" onmouseout="di('home','home_up');"><img name="home" src="images/homeup.gif" width="93" height="26" border="0" alt="Home - NT Web Hosting, Unix Web Hosting"></a><a href="plans.shtml" onmouseover="di('hosting', 'hosting_over');" onmouseout="di('hosting','hosting_up');"><img name="hosting" src="images/webhostingup.gif" width="93" height="26" border="0" alt="Prices/Plans - NT Web Hosting, Unix Web Hosting, ASP, CGI, shopping cart"></a><a href="services.shtml" onmouseover="di('services', 'services_over');" onmouseout="di('services','services_up');"><img name="services" src="images/servicesup.gif" width="93" height="26" border="0" alt="Services - NT Web Hosting, Unix Web Hosting, Web Site Design, Graphics Design, CGI Scripts, Consulting"></a><a href="faq.shtml" onmouseover="di('faq', 'faq_over');" onmouseout="di('faq','faq_up');"><img name="faq" src="images/faqup.gif" width="93" height="26" border="0" alt="FAQ's - NT Web Hosting, Unix Web Hosting"></a><a href="contact.shtml" onmouseover="di('contacts', 'contacts_over');" onmouseout="di('contacts','contacts_up');"><img name="contacts" src="images/contactsup.gif" width="93" height="26" border="0" alt="Contact Us - NT Web Hosting, Unix Web Hosting"></a>
+<a href="index.htm" onmouseover="di('home', 'home_over');" onmouseout="di('home','home_up');"><img name="home" src="images/homeup.gif" width="93" height="26" border="0" alt="web hosting services, reliable web hosting services, dependable web hosting services, professional web hosting services"></a><a href="plans.shtml" onmouseover="di('hosting', 'hosting_over');" onmouseout="di('hosting','hosting_up');"><img name="hosting" src="images/webhostingup.gif" width="93" height="26" border="0" alt="Prices/Plans - web hosting services, reliable web hosting services, dependable web hosting services, professional web hosting services"></a><a href="services.shtml" onmouseover="di('services', 'services_over');" onmouseout="di('services','services_up');"><img name="services" src="images/servicesup.gif" width="93" height="26" border="0" alt="Services - web hosting services, reliable web hosting services, dependable web hosting services, professional web hosting services"></a><a href="faq.shtml" onmouseover="di('faq', 'faq_over');" onmouseout="di('faq','faq_up');"><img name="faq" src="images/faqup.gif" width="93" height="26" border="0" alt="FAQ's - web hosting services, reliable web hosting services, dependable web hosting services, professional web hosting services"></a><a href="contact.shtml" onmouseover="di('contacts', 'contacts_over');" onmouseout="di('contacts','contacts_up');"><img name="contacts" src="images/contactsup.gif" width="93" height="26" border="0" alt="Contact Us - web hosting services, reliable web hosting services, dependable web hosting services, professional web hosting services"></a>
        </center>
      </td>
     </tr>
@@ -188,13 +186,76 @@ If we decide to change our privacy policy, we will post those changes on this pa
 
 
 <center>
+          <a href="domain-hosting.html"><img src="images/pixel.gif" border="0" alt="domain hosting"></a>
+          <a href="cheap-web-hosting.html"><img src="images/pixel.gif" border="0" alt="cheap web hosting"></a>
+          <a href="web-hosting-services.html"><img src="images/pixel.gif" border="0" alt="web hosting services"></a>
+          <a href="web-page-hosting.html"><img src="images/pixel.gif" border="0" alt="web page hosting"></a>
+          <a href="affordable-web-hosting.html"><img src="images/pixel.gif" border="0" alt="affordable web hosting"></a>
+          <a href="web-hosting-company.html"><img src="images/pixel.gif" border="0" alt="web hosting company"></a>
+          <a href="low-cost-web-hosting.html"><img src="images/pixel.gif" border="0" alt="low cost web hosting"></a>
+          <a href="business-web-hosting.html"><img src="images/pixel.gif" border="0" alt="business web hosting"></a>
+          <a href="cheap-web-site-hosting.html"><img src="images/pixel.gif" border="0" alt="cheap web site hosting"></a>
+          <a href="web-hosting-frontpage.html"><img src="images/pixel.gif" border="0" alt="web hosting frontpage"></a>
+          <a href="ecommerce-web-hosting.html"><img src="images/pixel.gif" border="0" alt="ecommerce web hosting"></a>
+          <a href="internet-hosting.html"><img src="images/pixel.gif" border="0" alt="internet hosting"></a>
+          <a href="reseller-web-hosting.html"><img src="images/pixel.gif" border="0" alt="reseller web hosting"></a>
+          <a href="discount-web-hosting.html"><img src="images/pixel.gif" border="0" alt="discount web hosting"></a>
+          <a href="ecommerce-hosting.html"><img src="images/pixel.gif" border="0" alt="ecommerce hosting"></a>
+          <a href="web-site-hosting-services.html"><img src="images/pixel.gif" border="0" alt="web site hosting services"></a>
+          <a href="web-hosting-provider.html"><img src="images/pixel.gif" border="0" alt="web hosting provider"></a>
+          <a href="virtual-web-hosting.html"><img src="images/pixel.gif" border="0" alt="virtual web hosting"></a>
+          <a href="best-web-hosting.html"><img src="images/pixel.gif" border="0" alt="best web hosting"></a>
+          <a href="inexpensive-web-hosting.html"><img src="images/pixel.gif" border="0" alt="inexpensive web hosting"></a>
+          <a href="hosting-web-site.html"><img src="images/pixel.gif" border="0" alt="hosting web site"></a>
+          <a href="cheap-hosting.html"><img src="images/pixel.gif" border="0" alt="cheap hosting"></a>
+          <a href="business-web-site-hosting.html"><img src="images/pixel.gif" border="0" alt="business web site hosting"></a>
+          <a href="internet-web-site-hosting.html"><img src="images/pixel.gif" border="0" alt="internet web site hosting"></a>
+          <a href="email-hosting.html"><img src="images/pixel.gif" border="0" alt="email hosting"></a>
+          <a href="web-hosting-site.html"><img src="images/pixel.gif" border="0" alt="web hosting site"></a>
+          <a href="asp-hosting.html"><img src="images/pixel.gif" border="0" alt="asp hosting"></a>
+          <a href="virtual-hosting.html"><img src="images/pixel.gif" border="0" alt="virtual hosting"></a>
+          <a href="internet-web-hosting.html"><img src="images/pixel.gif" border="0" alt="internet web hosting"></a>
+          <a href="frontpage-hosting.html"><img src="images/pixel.gif" border="0" alt="frontpage hosting"></a>
+          <a href="nt-web-hosting.html"><img src="images/pixel.gif" border="0" alt="nt web hosting"></a>
+          <a href="domain-name-hosting.html"><img src="images/pixel.gif" border="0" alt="domain name hosting"></a>
+          <a href="christian-web-hosting.html"><img src="images/pixel.gif" border="0" alt="christian web hosting"></a>
+          <a href="hosting-company.html"><img src="images/pixel.gif" border="0" alt="hosting company"></a>
+          <a href="shared-hosting.html"><img src="images/pixel.gif" border="0" alt="shared hosting"></a>
+          <a href="reseller-hosting.html"><img src="images/pixel.gif" border="0" alt="reseller hosting"></a>
+          <a href="e-commerce-hosting.html"><img src="images/pixel.gif" border="0" alt="e commerce hosting"></a>
+          <a href="cgi-hosting.html"><img src="images/pixel.gif" border="0" alt="cgi hosting"></a>
+          <a href="domain-web-hosting.html"><img src="images/pixel.gif" border="0" alt="domain web hosting"></a>
+          <a href="affordable-web-site-hosting.html"><img src="images/pixel.gif" border="0" alt="affordable web site hosting"></a>
+          <a href="small-business-web-hosting.html"><img src="images/pixel.gif" border="0" alt="small business web hosting"></a>
+          <a href="cheap-domain-hosting.html"><img src="images/pixel.gif" border="0" alt="cheap domain hosting"></a>
+          <a href="professional-web-hosting.html"><img src="images/pixel.gif" border="0" alt="professional web hosting"></a>
+          <a href="web-domain-hosting.html"><img src="images/pixel.gif" border="0" alt="web domain hosting"></a>
+          <a href="professional-web-site-hosting.html"><img src="images/pixel.gif" border="0" alt="professional web site hosting"></a>
+          <a href="secure-web-hosting.html"><img src="images/pixel.gif" border="0" alt="secure web hosting"></a>
+          <a href="fast-web-hosting.html"><img src="images/pixel.gif" border="0" alt="fast web hosting"></a>
+          <a href="virtual-domain-hosting.html"><img src="images/pixel.gif" border="0" alt="virtual domain hosting"></a>
+          <a href="best-web-hosting-services.html"><img src="images/pixel.gif" border="0" alt="best web hosting services"></a>
+          <a href="mysql-hosting.html"><img src="images/pixel.gif" border="0" alt="mysql hosting"></a>
+          <a href="affordable-hosting.html"><img src="images/pixel.gif" border="0" alt="affordable hosting"></a>
+          <a href="nt-hosting.html"><img src="images/pixel.gif" border="0" alt="nt hosting"></a>
+          <a href="internet-web-page-hosting.html"><img src="images/pixel.gif" border="0" alt="internet web page hosting"></a>
+          <a href="cheap-affordable-web-hosting.html"><img src="images/pixel.gif" border="0" alt="cheap affordable web hosting"></a>
+          <a href="quality-web-site-hosting-service.html"><img src="images/pixel.gif" border="0" alt="quality web site hosting service"></a>
+          <a href="hosting-a-web-site.html"><img src="images/pixel.gif" border="0" alt="hosting a web site"></a>
+          <a href="web-hosting-domain.html"><img src="images/pixel.gif" border="0" alt="web hosting domain"></a>
+          <a href="best-web-hosting-company.html"><img src="images/pixel.gif" border="0" alt="best web hosting company"></a>
+          <a href="easy-web-site-hosting.html"><img src="images/pixel.gif" border="0" alt="easy web site hosting"></a>
+          <a href="best-web-site-hosting-service.html"><img src="images/pixel.gif" border="0" alt="best web site hosting service"></a>
+          <a href="quality-web-site-hosting-services.html"><img src="images/pixel.gif" border="0" alt="quality web site hosting services"></a>
+<br>
 <font face="HELVETICA, ARIAL, sans-serif" size="1">
-<br>© 1998 - 2001 HosTek.com - All Rights Reserved.<br>
+<br>© 1998 - 2002 HosTek.com - All Rights Reserved.<br>
 a service of Advanced Online Solutions, Inc.<br>
 <img src="images/hosteklogo2.gif" width="95" height="46" border="0" alt="HosTek.com - NT web hosting, ASP web hosting, PHP web hosting, mySQL web hosting">
 </font></center><font face="HELVETICA, ARIAL, sans-serif" size="1">
 	
 <!-- /TD></TR></TABLE -->
+<script language="javascript" src="http://hc2.humanclick.com/hc/40912563/x.js?cmd=file&amp;file=chatScript3&amp;site=40912563&amp;category=en;corporate;2"> </script>
 
 
 
